--- a/css/registration_number.css
+++ b/css/registration_number.css
@@ -12,7 +12,7 @@ h2 {
   li   {
   border: 1px solid black;
   background-color: skyblue;
-  border-radius: 7px;
+  border-radius: 15px;
   padding: 10px;
   margin-top: 15px;
   margin-left: 5px;
@@ -36,7 +36,7 @@ h2 {
 .clearBtn{
   width: 90px;
   height: 40px;
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 .DropSelector {
@@ -46,6 +46,7 @@ h2 {
 
 #alertID {
   width: 10%
+  colo: red;
 }
 
 
