--- a/css/registration_number.css
+++ b/css/registration_number.css
@@ -42,11 +42,15 @@ h2 {
 .DropSelector {
   background-color: grey;
   color: white;
+  width: 150px;
+  height: 40px;
+  text-align: center;
 }
+
 
 #alertID {
   width: 10%
-  colo: red;
+  color: red;
 }
 
 
@@ -56,6 +60,10 @@ h2 {
   height: 100px;
   /*color: white*/
 }
+/* .filter{
+  width: 200px;
+
+} */
 
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
